Wrong Bound Box calculated for curves #94078

Closed
opened 2021-12-14 22:12:03 +01:00 by Germano Cavalcante · 8 comments

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-13 23:43, hash: b647509913
Worked: version: 2.93.6

Short description of error
When a Curve has mesh generated, the boundbox returned for operators or drawn by the overlay does not match the geometry seen.
GIF.gif

Exact steps for others to reproduce the error

**Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-13 23:43, hash: `b647509913` Worked: version: 2.93.6 **Short description of error** When a Curve has mesh generated, the boundbox returned for operators or drawn by the overlay does not match the geometry seen. ![GIF.gif](https://archive.blender.org/developer/F12742674/GIF.gif) **Exact steps for others to reproduce the error** - open attached file [curve_bb_bug.blend](https://archive.blender.org/developer/F12742682/curve_bb_bug.blend)
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#93883 was marked as duplicate of this issue

#93883 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @DigThroughTheDitches

Added subscriber: @DigThroughTheDitches

Added subscriber: @TobiasLemke

Added subscriber: @TobiasLemke

Not sure if that is the same bug, but when I import any .svg file in Blender 3.0, the bounding boxes are way larger than the curves them selves.

image.png

Not sure if that is the same bug, but when I import any .svg file in Blender 3.0, the bounding boxes are way larger than the curves them selves. ![image.png](https://archive.blender.org/developer/F12753352/image.png)

This issue was referenced by 5560f32447

This issue was referenced by 5560f3244717221600506866bf1c79d370e0045e
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-01-07 14:57:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94078
No description provided.